--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.failed {
+    animation: failed 600ms ease-out;
+}
+
+@keyframes failed {
+    from {color: red;}
+    to {color:white}
+}
